--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Jacob-Short <thatmanjshort@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.6"
+Pillow = "^8.4.0"
 
 [tool.poetry.dev-dependencies]
 
